2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Decruft: Remove "yet another redolently redundant RCS rap".

	* Makefile.am (EXTRA_DIST): Remove yarrrr.c.
	(YALL, YPROGS): Delete vars.
	($(YPROGS)): Delete target.
	(y-all, y-clean): Likewise.
	* yarrrr.c: Delete file.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] With ‘EXEEXT’, use ‘execvp’ instead of ‘execv’.

	* rcsutil.c (EXECV): New #define.
	(runv): Use ‘EXECV’.

2011-01-14  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] With ‘EXEEXT’, don't absolutize; instead, simply suffix.

	* b-peer.c (LOSE): Delete macro.
	(invocation_full_name): Delete func.
	(find_peer_prog) [!EXEEXT]: Call ‘find_in_path’, ‘PFATAL’
	directly; mention directory and env var ‘PATH’ in error message.
	(find_peer_prog) [EXEEXT]: Compute the underlying filename
	as simply the concatenation of the meaningful and ‘EXEEXT’.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Make error message for peer-finding failure more informative.

	* b-peer.c (LOSE): Use "free var" ‘name’.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Consider ‘EXEEXT’ when searching for peer programs.

	* b-peer.c (invocation_full_name) [EXEEXT]: Construct a
	filename, appending ‘PROGRAM (invoke)’ and ‘EXEEXT’ if necessary.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Handle failure to find peer programs more gracefully.

	* b-peer.c: Include "b-complain.h".
	(LOSE): New macro.
	(invocation_full_name): New static func.
	(find_peer_prog): Use ‘invocation_full_name’;
	if last slash cannot be found, don't abort;
	instead, display a diagnostic and exit failurefully.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[dtp] Fix bug: Don't clobber ‘yday’ unconditionally.

	* maketime.c (tm2time): If ‘yday’ is valid, compute ‘mon’
	and ‘mday’ from it; otherwise, compute it from ‘mon’ and ‘mday’.

2011-01-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Fix bug: Don't confuse day of {week,year} in date parsing.
